feat: copilot-api vscode-extension

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
     }
-  }
+  },
+  "exclude": ["vscode-extension/dist", "vscode-extension/dist/**"]
 }
