--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,10 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Install VS Code extension dependencies
+        working-directory: vscode-extension
+        run: bun install
+
       - name: Run linter
         run: bun run lint:all
 
